load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "loader.go",
        "parser.go",
        "service.go",
    ],
    importpath = "github.com/emman27/gitignore/pkg/gitignore",
    visibility = ["//visibility:public"],
    deps = [
        "@//pkg/log:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "loader_test.go",
        "mock_loader_test.go",
        "parser_test.go",
        "service_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
